--- a/index.html
+++ b/index.html
@@ -24,21 +24,24 @@
             <span>Текущий УП</span>
         </div>
         <div class="window" v-if="show">
-            <input type="number" @click="norma=''" v-model.lazy="norma" onkeypress="this.value=this.value.substring(0,3);">
+            <input type="number" @click="norma=''" v-model.lazy="norma"
+                   onkeypress="this.value=this.value.substring(0,3);">
             <i class="fas fa-check-square" @click="show=!show"></i>
         </div>
     </header>
     <div class="clr-block"></div>
     <div v-for="product in products">
         <div class="block-for-product">
-            <div class="block-for-title">
-                <div class="name">{{product.name}}</div>
-                <div class="price">{{product.price}}</div>
-            </div>
-            <div class="block-for-btn">
-                <button @click="decreaseCol(product)">-</button>
-                <div class="num">{{product.col}}</div>
-                <button @click="increaseCol(product)">+</button>
+            <div class="name">{{product.name}}</div>
+            <div class="product-content">
+                <div class="block-for-title">
+                    <div class="num">{{product.col}}</div>
+                    <div class="price">{{product.price}}</div>
+                </div>
+                <div class="block-for-btn">
+                    <button @click="decreaseCol(product)">-</button>
+                    <button @click="increaseCol(product)">+</button>
+                </div>
             </div>
         </div>
     </div>
