--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             </div>
         </div>
     </div>
+    <div class="signature">
+        <div class="my-signature">
+            <span class="v-info"><i>Version 2.4</i></span>
+            <span class="dev-info">developed by Dryakhlov K.V.</span>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
