--- a/index.html
+++ b/index.html
@@ -26,10 +26,39 @@
                     <span>Текущий УП</span>
                 </div>
             </div>
+            <div class="block-for-business" v-if="showBusiness">
+                <div class="bus-container">
+                    <div class="bus-block">
+                        <div class="pos-for-rubel">
+                            <div class="rubel">{{fixedIncome}} &#8381;</div>
+                        </div>
+                        <span class="title-bus">Итого сегодня</span>
+                    </div>
+                    <div class="bus-block">
+                        <div class="pos-for-rubel">
+                            <div class="bus-price" @click="showPrice=!showPrice">
+                                <span class="rubel" v-if="price.length != 0">{{price}} &#8381;</span>
+                                <span class="empty-price" v-else>0 &#8381;</span>
+                                <i class="fas fa-pen"></i>
+                            </div>
+                        </div>
+                        <span class="title-bus">Стоимость УП</span>
+                    </div>
+                </div>
+            </div>
             <div class="window" v-if="show">
                 <input type="number" @click="norma=''" v-model.lazy="norma"
                        onkeypress="this.value=this.value.substring(0,3);">
                 <i class="fas fa-check-square" @click="show=!show"></i>
+            </div>
+            <div class="window" v-if="showPrice">
+                <input type="number" @click="price=''" v-model.lazy="price"
+                       onkeypress="this.value=this.value.substring(0,3);">
+                <i class="fas fa-check-square" @click="showPrice=!showPrice"></i>
+            </div>
+            <div class="business" @click="showBusiness=!showBusiness">
+                <i class="fas fa-ruble-sign bus-icon" v-if="showBusiness"></i>
+                <i class="fas fa-calculator bus-icon" v-if="!showBusiness"></i>
             </div>
         </header>
         <div class="clr-block"></div>
@@ -54,7 +83,7 @@
     <div class="signature">
         <div class="clr-signature"></div>
         <div class="my-signature">
-            <span class="v-info"><i>Version 2.6</i></span>
+            <span class="v-info"><i>Version 2.7</i></span>
             <span class="dev-info">developed by Kpstya</span>
         </div>
     </div>
