--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <methods-comp ref="methodsComp"></methods-comp>
         <clr-comp ref="clrComp"></clr-comp>
         <products ref="products"></products>
+        <error ref="error"></error>
     </div>
     <signature-comp ref="signatureComp"></signature-comp>
 </div>
@@ -23,6 +24,7 @@
 <script src="scripts/ClrComp.js"></script>
 <script src="scripts/MethodsComp.js"></script>
 <script src="scripts/ProductsComp.js"></script>
+<script src="scripts/ErrorComp.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
